fixed x overflow

--- a/forDetailsPage.css
+++ b/forDetailsPage.css
@@ -47,7 +47,7 @@ body {
   vertical-align: middle;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   .details-container {
     width: 100%;
     height: fit-content;
