--- a/mobileresponsiveness.css
+++ b/mobileresponsiveness.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   body {
     font-family: "Poppins", sans-serif;
     overflow-x: hidden;
