--- a/mobileresponsivenessaboutpage.css
+++ b/mobileresponsivenessaboutpage.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   * {
     font-family: "Roboto", sans-serif;
   }
