--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   body {
     overflow-x: hidden;
     top: 0px;
